# cpp_sem5

./: CMakeLists.txt  CMakePresets.json  README.md
include/: application.hpp  calculator.hpp  command.hpp  engine.h  engine.hpp  plugin_interface.hpp  plugin_manager.hpp  wrapper.hpp
libs/add_plugin/: CMakeLists.txt  add.cpp
libs/degree_plugin/: CMakeLists.txt  degree.cpp
libs/log_plugin/: CMakeLists.txt  log.cpp
libs/multiply_plugin/: CMakeLists.txt  multiply.cpp
libs/power_plugin/: CMakeLists.txt  power.cpp
libs/sinus_plugin/: CMakeLists.txt  sin.cpp
src/: CMakeLists.txt  application.cpp  application.hpp  calculator.cpp  calculator.hpp  engine.cpp  main.cpp  plugin_interface.hpp  plugin_manager.cpp  plugin_manager.hpp
tests/: CMakeLists.txt  tests.cpp
