cmake_minimum_required(VERSION 3.20)
project(executor VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    if(CMAKE_BUILD_TYPE STREQUAL "Debug")
        add_compile_options(-O0 -g -Wall -Wextra -Wpedantic -Werror -Wno-unused-parameter)
    else()
        add_compile_options(-O3 -DNDEBUG -Wall -Wextra -Wpedantic -Werror -Wno-unused-parameter)
    endif()
elseif(MSVC)
    if(CMAKE_BUILD_TYPE STREQUAL "Debug")
        add_compile_options(/Od /Zi /W4 /WX /EHsc /D_CRT_SECURE_NO_WARNINGS)
    else()
        add_compile_options(/O2 /DNDEBUG /W4 /WX /EHsc /D_CRT_SECURE_NO_WARNINGS)
    endif()
endif()

include_directories(${PROJECT_SOURCE_DIR}/include)
add_subdirectory(src)