cmake_minimum_required(VERSION 3.20)
project(executor VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    if(WIN32)
        add_compile_options(/std:c++20)
    else()
        add_compile_options(-std=c++20)
    endif()
elseif(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    add_compile_options(-std=c++20)
elseif(MSVC)
    add_compile_options(/std:c++20)
endif()

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    if(WIN32)
        if(CMAKE_CXX_COMPILER_ID MATCHES "Clang|MSVC")
            add_compile_options(/Od /Zi /RTC1)
        endif()
    else()
        add_compile_options(-O0 -g)
    endif()
else()
    if(WIN32)
        if(CMAKE_CXX_COMPILER_ID MATCHES "Clang|MSVC")
            add_compile_options(/O2 /DNDEBUG)
        endif()
    else()
        add_compile_options(-O3 -DNDEBUG)
    endif()
endif()

if(WIN32)
    if(CMAKE_CXX_COMPILER_ID MATCHES "Clang|MSVC")
        add_compile_options(/W4)
    endif()
else()
    add_compile_options(-Wall -Wextra -Wpedantic -Wno-unused-parameter)
endif()

if(WIN32)
    add_definitions(-D_CRT_SECURE_NO_WARNINGS -DWIN32_LEAN_AND_MEAN)
endif()

include_directories(${PROJECT_SOURCE_DIR}/include)
add_subdirectory(src)